crates/biome_cli/tests/snapshots/main_commands_format/ignore_vcs_ignored_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true
  }
}
```

## `.gitignore`

```gitignore

file2.js

```

## `file1.js`

```js
array.map((sentence) => sentence.split(" ")).flat();

```

## `file2.js`

```js
foo.call();


	bar.call();
```

# Emitted Messages

```block
Formatted 1 file in <TIME>.
```

```block
Fixed 1 file.
```
