crates/biome_cli/tests/snapshots/main_commands_format/invalid_config_file_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --config-path test --write file.js
```

## `file.js`

```js
content
```

# Termination Message

```block
test configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome couldn't find a configuration in the directory test.
  


```
