crates/biome_cli/tests/snapshots/main_commands_format/language_overrides_global_delimiter_spacing.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.js
```

## `biome.json`

```json
{
  "formatter": {
    "delimiterSpacing": true
  },
  "javascript": {
    "formatter": {
      "delimiterSpacing": false
    }
  }
}
```

## `file.js`

```js
const arr = [1, 2, 3];
function foo(a, b) {}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
