crates/biome_cli/tests/snapshots/main_commands_format/line_width_parse_errors_overflow.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --line-width 321 file.js
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `321`: The line width should be between 1 and 320, got 321 
  


```
